--- a/APBD/app/src/main/res/layout/register_otpcode.xml
+++ b/APBD/app/src/main/res/layout/register_otpcode.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#06D6A0">
+    android:background="#06D6A0"
+    android:id="@+id/ConfirmRegis">
 
     <Button
         android:id="@+id/buttonRegister3"
