--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -7,6 +7,7 @@
     android:background="#06D6A0"
     tools:context=".Home"
     tools:ignore="MissingDefaultResource"
+    android:id="@+id/homelayout"
     >
 
     <TextView
@@ -16,7 +17,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:gravity="center_horizontal|top"
-        android:textAlignment="viewStart"
         android:textAppearance="@style/hai_name_"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
