--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -5,10 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06D6A0"
+    android:id="@+id/home_activity"
     tools:context=".Home"
-    android:id="@+id/Home"
-    tools:ignore="MissingDefaultResource"
-    android:id="@+id/homelayout"
     >
 
     <TextView
@@ -18,10 +16,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:gravity="center_horizontal|top"
-<<<<<<< HEAD
-=======
         android:textAlignment="center"
->>>>>>> 7bdfb66b8def7c7e803c6b13bc83481d388c6bbe
         android:textAppearance="@style/hai_name_"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.098" />
-
     <View
 
         android:id="@+id/rectangles"
@@ -432,7 +426,6 @@
         app:layout_constraintVertical_bias="0.508" />
 
     <View
-
         android:id="@+id/group_32"
         android:layout_width="458dp"
         android:layout_height="76dp"
@@ -445,7 +438,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        android:onClick="goToHistory"/>
+        />
 
     <TextView
         android:id="@+id/new_transac3"
@@ -475,7 +468,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.963"
-        app:srcCompat="@drawable/wallet" />
+        app:srcCompat="@drawable/wallet"
+        android:onClick="goToHistory"/>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -493,7 +487,7 @@
         android:onClick="goToPlan"/>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/Gotohome"
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
@@ -505,7 +499,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.963"
         app:srcCompat="@drawable/dashboard"
-        android:onClick="goToHome"/>
+        />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -618,7 +612,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.984"
-        android:onClick="goToHome"/>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
