--- a/APBD/app/src/main/res/layout/history.xml
+++ b/APBD/app/src/main/res/layout/history.xml
@@ -2,57 +2,57 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/historylayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#06D6A0"
-    tools:context=".history"
-    android:id="@+id/historylayout">
+    tools:context=".history">
 
     <Button
         android:id="@+id/button5"
         android:layout_width="127dp"
         android:layout_height="36dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginBottom="12dp"
         android:backgroundTint="#fcfcfc"
+        android:onClick="alertKonfirmasi"
         android:text="Expenses"
         android:textColor="#000000"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintEnd_toStartOf="@+id/button6"
-        app:layout_constraintHorizontal_bias="0.296"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.957"
-        tools:cornerRadius="20"
-        android:onClick="alertKonfirmasi"/>
+        tools:cornerRadius="20" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="127dp"
         android:layout_height="36dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="12dp"
         android:backgroundTint="#fcfcfc"
         android:text="income"
         android:textColor="#000000"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.862"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.448"
         tools:cornerRadius="20" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="127dp"
         android:layout_height="24dp"
+        android:layout_marginStart="32dp"
         android:text="Rp 310.000,-"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/textView21"
-        app:layout_constraintHorizontal_bias="0.296"
+        app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19"
+        app:layout_constraintVertical_bias="0.625"
         tools:fontFamily="@font/roboto_bold"
         tools:textAlignment="center" />
 
@@ -60,15 +60,14 @@
         android:id="@+id/textView21"
         android:layout_width="127dp"
         android:layout_height="25dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="28dp"
         android:text="Rp 1.000.000,-"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.862"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:layout_constraintVertical_bias="0.843"
         tools:fontFamily="@font/roboto_bold"
         tools:textAlignment="center" />
 
@@ -76,15 +75,14 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Total Transactions :"
         android:textColor="@color/white"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.122"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:layout_constraintVertical_bias="0.031"
         tools:fontFamily="@font/roboto_bold" />
 
     <TextView
@@ -95,10 +93,9 @@
         android:backgroundTint="#FFD166"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.239" />
+        app:layout_constraintVertical_bias="0.213" />
 
     <EditText
         android:id="@+id/editTextDate2"
@@ -384,37 +381,39 @@
         app:srcCompat="@drawable/menu" />
 
     <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1-12-2020"
-        android:textColor="@android:color/black"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView9"
-        app:layout_constraintEnd_toStartOf="@+id/textView28"
-        app:layout_constraintHorizontal_bias="0.12"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView26"
-        app:layout_constraintVertical_bias="0.19"
-        tools:fontFamily="@font/roboto" />
-
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/itemName"
+        android:layout_width="46dp"
+        android:layout_height="19dp"
         android:text="Netflix"
         android:textColor="@android:color/black"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
-        app:layout_constraintEnd_toStartOf="@+id/textView28"
-        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintEnd_toStartOf="@+id/itemPrice"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.296"
+        app:layout_constraintVertical_bias="0.265"
         tools:fontFamily="@font/roboto_bold" />
 
     <TextView
-        android:id="@+id/textView28"
+        android:id="@+id/itemDate"
+        android:layout_width="37dp"
+        android:layout_height="13dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="32dp"
+        android:text="1-12-2020"
+        android:textColor="@android:color/black"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView9"
+        app:layout_constraintEnd_toStartOf="@+id/itemPrice"
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/itemName"
+        app:layout_constraintVertical_bias="1.0"
+        tools:fontFamily="@font/roboto" />
+
+    <TextView
+        android:id="@+id/itemPrice"
         android:layout_width="127dp"
         android:layout_height="24dp"
         android:text="Rp 170.000,-"
@@ -472,13 +471,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#00FFFFFF"
+        android:onClick="goToHome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton19"
         app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        android:onClick="goToHome"/>
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
