--- a/APBD/app/src/main/res/layout/expense.xml
+++ b/APBD/app/src/main/res/layout/expense.xml
@@ -99,7 +99,7 @@
         tools:textAlignment="center" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -154,7 +154,7 @@
         app:srcCompat="@android:drawable/ic_dialog_info" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/Amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
