--- a/APBD/app/src/main/res/layout/income.xml
+++ b/APBD/app/src/main/res/layout/income.xml
@@ -158,7 +158,7 @@
         />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/IncomeDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -211,7 +211,7 @@
         app:srcCompat="@android:drawable/ic_dialog_info" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/IncomeAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -224,7 +224,7 @@
         app:layout_constraintVertical_bias="0.553" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSave"
         android:layout_width="160dp"
         android:layout_height="52dp"
         android:backgroundTint="#06D6A0"
