--- a/APBD/app/src/main/res/layout/income.xml
+++ b/APBD/app/src/main/res/layout/income.xml
@@ -186,7 +186,7 @@
         app:layout_constraintVertical_bias="0.246" />
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/editTextDate1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
