--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -421,9 +421,8 @@
         app:layout_constraintHorizontal_bias="0.078"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.963"
-        app:srcCompat="@drawable/dashboard"
-        />
+        app:layout_constraintVertical_bias="0.976"
+        app:srcCompat="@drawable/dashboard" />
 
     <ImageView
         android:id="@+id/imageView3"
