--- a/APBD/app/src/main/res/layout/income.xml
+++ b/APBD/app/src/main/res/layout/income.xml
@@ -248,7 +248,20 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.767"
+        tools:cornerRadius="20" />
+
+    <Button
+        android:id="@+id/buttonSave3"
+        android:layout_width="160dp"
+        android:layout_height="52dp"
+        android:backgroundTint="#06D6A0"
+        android:text="Update"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.854"
-        tools:cornerRadius="20"
-        />
+        tools:cornerRadius="20" />
 </androidx.constraintlayout.widget.ConstraintLayout>
