minor update blm bisa view

--- a/APBD/app/src/main/res/layout/expense.xml
+++ b/APBD/app/src/main/res/layout/expense.xml
@@ -434,8 +434,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.851"
-        tools:cornerRadius="20"
-        android:onClick="alertKonfirmasi"/>
+        tools:cornerRadius="20"/>
 
     <Button
         android:id="@+id/recovery"
