view widget latest transaction

--- a/APBD/app/src/main/res/layout/history_widget.xml
+++ b/APBD/app/src/main/res/layout/history_widget.xml
@@ -1,4 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/appWidgetBackgroundColor"
@@ -6,16 +8,50 @@
     android:theme="@style/ThemeOverlay.APBD.AppWidgetContainer">
 
     <TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="?attr/appWidgetBackgroundColor"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="?attr/appWidgetTextColor"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
-</RelativeLayout>
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:padding="5dp"
+        android:layout_margin="5dp"
+        android:textSize="14dp"
+        android:text="Latest Transaction"
+        android:textColor="@color/black"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@color/teal_200"
+        android:padding="5dp">
+
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/Deskripsi"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:text="Netflix"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/Tanggal"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:text="02-12-00"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/Nominal"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            android:text="Rp 170.000,-"
+            android:textAlignment="center"
+            android:padding="5dp"/>
+    </LinearLayout>
+</LinearLayout>
