--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -309,7 +309,6 @@
         android:layout_alignParentTop="true"
         android:gravity="center_horizontal|top"
         android:text="@string/food"
-        android:textAlignment="viewStart"
         android:textAppearance="@style/netflix"
         app:layout_constraintBottom_toBottomOf="@+id/group_3"
         app:layout_constraintEnd_toEndOf="@+id/group_3"
@@ -536,6 +535,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.984"
+        />
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         />
 
 
