--- a/APBD/app/src/main/res/layout/home.xml
+++ b/APBD/app/src/main/res/layout/home.xml
@@ -552,6 +552,19 @@
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         />
 
+    <Button
+        android:id="@+id/adTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.836"
+        android:onClick="showHideads"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
