--- a/APBD/app/src/main/res/layout/settings_page.xml
+++ b/APBD/app/src/main/res/layout/settings_page.xml
@@ -238,22 +238,6 @@
 <!--        app:layout_constraintVertical_bias="1.0" />-->
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="146dp"
-        android:layout_height="54dp"
-        android:backgroundTint="#FFFFFF"
-        android:onClick="goToHome"
-        android:text="Save"
-        android:textColor="@color/teal_200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.799"
-        tools:cornerRadius="12" />
-
-    <Button
         android:id="@+id/checkStorage"
         android:layout_width="146dp"
         android:layout_height="54dp"
@@ -264,10 +248,42 @@
         android:textColor="@color/teal_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.89"
+        app:layout_constraintHorizontal_bias="0.875"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.799"
+        app:layout_constraintVertical_bias="0.782"
+        tools:cornerRadius="12" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="146dp"
+        android:layout_height="54dp"
+        android:backgroundTint="#FFFFFF"
+        android:onClick="goToHome"
+        android:text="Save"
+        android:textColor="@color/teal_200"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.184"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.782"
+        tools:cornerRadius="12" />
+
+    <Button
+        android:id="@+id/RemoveAds"
+        android:layout_width="146dp"
+        android:layout_height="54dp"
+        android:backgroundTint="#FFFFFF"
+        android:onClick="showHideads"
+        android:text="Remove Ads"
+        android:textColor="@color/teal_200"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.862"
         tools:cornerRadius="12" />
 
     <ImageButton
@@ -406,6 +422,5 @@
         app:layout_constraintHorizontal_bias="0.922"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
