--- a/APBD/app/src/main/res/layout/expense.xml
+++ b/APBD/app/src/main/res/layout/expense.xml
@@ -240,6 +240,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:text="Pick the date"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
